bug in number question fixed added ol

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
-    background: grey;
+    background: rgb(241, 237, 237);
 }
-p{
+#container{
     border-style: double;
+    padding: 20px;
 }
